--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <!-- Masthead Subheading-->
 
 
-               <p class="masthead-subheading font-weight-light mb-0">This matters because there are so many disabled people out there that have loads of talent that companies are wasting just because they are disabled.</p>
+               <p class="masthead-subheading font-weight-light mb-0">This matters because there are many disabled people that have immense talent that companies are ignoring just because of their disability.</p>
 
 
            </div>
@@ -495,7 +495,7 @@
                    <div class="col-sm"><p>Contact Margaret Heflin for more infomation . </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Kyler Spike for more infomation on </p></div>
 
 
                </div>
@@ -693,7 +693,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Disability Problem May Be an Unemployment Problem in Disguise</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Misericordia</h2>
 
 
                                    <!-- Icon Divider-->
