--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <!-- Masthead Subheading-->
 
 
-               <p class="masthead-subheading font-weight-light mb-0">This matters because there are many disabled people that have immense talent that companies are ignoring just because of their disability.</p>
+               <p class="masthead-subheading font-weight-light mb-0">This matters because there are many disabled people that are unable to forge a successful career path because they are not being hired due to their disability. Unemployment rates for disabled people continue to be significantly behind the rates of non-disabled counterparts. This indicates a necessary need for policy reform within government. </p>
 
 
            </div>
@@ -351,7 +351,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/Seal.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/Equal opportunity.png" alt="..." />
 
 
                        </div>
@@ -492,10 +492,10 @@
                    <div class="col-sm"><p>Contact Bibianna Rodriguez for more information on </p></div>
 
 
-                   <div class="col-sm"><p>Contact Margaret Heflin for more infomation . </p></div>
+                   <div class="col-sm"><p>Contact Margaret Heflin for more information on the “Why it Matters” Section. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Kyler Spike for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Kyler Spike for more information on </p></div>
 
 
                </div>
@@ -714,10 +714,10 @@
                                    </div>
 
 
-                                   <!-- Portfolio Modal - Video-->
+                                   <!-- Portfolio Modal - Image-->
 
 
-                                   <socialsecurity.jpg>
+                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/img6.png" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
