--- a/index.html
+++ b/index.html
@@ -465,16 +465,16 @@
                    <div class="col-sm"><p>Contact Harrison Yosick for more information on the about section and first image and information on the first image. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Jacob Tabish for more information on the video on the third image under the portfolio tab and also the “why it matters” section under the title.</p></div>
+                   <div class="col-sm"><p>Contact Jacob Tabish for more information on the Disabilities and Work section.</p></div>
 
 
-                   <div class="col-sm"><p>Contact Dillon Walsh for more information on the about section. </p></div>
+                   <div class="col-sm"><p>Contact Dillon Walsh for more information on the Title. </p></div>
 
 
                    <div class="col-sm"><p>Contact Rachel Lowe for more information on the organization section. x</p></div>
 
 
-                   <div class="col-sm"><p>Contact Michael Hecht for more information on </p></div>
+                   <div class="col-sm"><p>Contact Michael Hecht for more information on employment from home.</p></div>
 
 
                </div>
@@ -489,13 +489,13 @@
                    <div class="col-sm"><p>Contact Dash Dallaire for more information on the second image. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Bibianna Rodriguez for more information on </p></div>
+                   <div class="col-sm"><p>Contact Bibianna Rodriguez for more information on Correlations Between Disability and Unemployment. </p></div>
 
 
                    <div class="col-sm"><p>Contact Margaret Heflin for more information on the “Why it Matters” Section. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Kyler Spike for more information on </p></div>
+                   <div class="col-sm"><p>Contact Kyler Spike for more information on the “Why it Matters” section. </p></div>
 
 
                </div>
@@ -1104,7 +1104,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/portfolio/EEOC.pdf" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/portfolio/eeopost.pdf" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
