--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/portfolio/Equal opportunity.png" alt="..." />
+                                   <img class="img-fluid" src="assets/img/portfolio/Equal opportunity.png" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
