--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Misericordia</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">wheelchair</h2>
 
 
                                    <!-- Icon Divider-->
