--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/Youtube.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/wheelchair.jpg" alt="..." />
 
 
                        </div>
